# batteryCode

./: README.md  readme.bd.txt  readme.md  readme.txt
application/porousModel/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.cc
application/porousModel/electricChemoFormula/: intercalationExpansion.cc  porosity.cc  return.cc  update.cc
application/porousModel/src/: apply_initial_condition.cc  assemble_system_interval.cc  electricChemoThermalResidual.cc  make_grid.cc  mechanicalResidual.cc  output_results.cc  run.cc  setup_FeSystem.cc  setup_constraints.cc  step_load.cc
include/: battery.h  battery.h~  model.h
include/ElectricChemo/: electricChemo.h
include/particleModel/: battery_particle.h  battery_particleModel.h~  particleModel.h
include/porousModel/: battery_porousModel.h  porousModelFormula.h  porousModelResidual.h
include/supplementary/: .h  dataStruct.h  functionEvaluations.h  parameters.h  supplementaryFunctions.h
original_code/: CMakeLists.txt  battery_thermal_2.cc  chemo_thermal.h  functionEvaluations.h  mechanics.h  parameters.h  quadraturePointData.h  supplementaryFunctions.h
src/: .txt
src/ElectricChemoExpression/: ButlerVolmer.cc  Usc.cc  c_li_surface.cc  electricChemo.cc  parameters.cc  return.cc  thermal.cc  update.cc
src/battery_base/: apply_initial_condition.cc  assemble_system_interval.cc  battery.cc  make_grid.cc  output_results.cc  run.cc  setMultDomain.cc  setup_FeSystem.cc  setup_constraints.cc  solve.cc  systemSetup.cc
src/model/: constitutive.cc  init.cc  mechanics.cc  model.cc  scalling.cc
(+5 files in other folders)
